<resources>
    <string name="app_name">HomeControllerAndroid</string>
    <string name="settings_name">Settings</string>
    <string name="data_info">DATA</string>
    <string name="humidity">Humidity: </string>
    <string name="temperature">Temperature: </string>
    <string name="btnMore">More</string>
    <string name="artist">Artist: </string>
    <string name="album">Album: </string>
    <string name="title">Title: </string>
    <string name="supla_scenes">Supla Scenes</string>
    <string name="temperature_units">Temperature Units</string>
    <string name="celsius">°C</string>
    <string name="fahrenheit">°F</string>
    <string name="volumio_IP">Volumio address</string>
    <string name="vol_data_updated">Volumio data updated!</string>
    <string name="vol_data_error">Volumio update error!</string>
    <string name="wrong_address">Wrong Volumio address!</string>
    <string name="data_update">Data updated!</string>
    <string name="data_update_error">Data update error!</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="data_not_saved">Data not saved!</string>
    <string name="scene_executed">Scene executed!</string>
    <string name="is_off"> is switched off!</string>
    <string name="is_on"> is switched on!</string>


    <!-- Preference Titles -->
    <string name="general">General</string>
    <string name="volumio_header">Volumio</string>
    <string name="supla_header">Supla</string>
    <string name="general_visibility">Cards visibility</string>
    <string name="airly_header">Airly</string>

    <!-- Volumio Preferences -->
    <string name="volumio_address">Volumio address</string>
    <string name="volumio_visibility">Elements visibility</string>
    <string name="volumio_play">Play</string>
    <string name="volumio_stop">Stop</string>
    <string name="choose_radio">Choose radio</string>

    <!-- Supla Preferences -->
    <string name="supla_rows">Rows in scene view</string>
    <string name="supla_devices">Manage devices</string>

    <!-- Airly Preferences -->
    <string name="max_dist">Max station distance [KM]</string>
    <string name="station_quantity">Station quantity</string>

    <string name="another_settings">Another</string>
    <string name="logout">Log out</string>

    <string name="add_device">Add device</string>
    <string name="add">Add</string>
    <string name="enter_device_name">enter name of device</string>
    <string name="modify_device">Modify device</string>
    <string name="device_deleted">Device deleted!</string>

    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="update_succes">Update succeed!</string>
    <string name="delete_succes">Device deleted!</string>

    <string name="error">Error</string>
    <string name="new_scene">New scene</string>

    <string name="choose_scene">choose scene</string>
    <string name="choose_value">choose value</string>
    <string name="choose_device">Choose Device</string>
    <string name="enter_value">Enter brightness</string>
    <string name="enter_name">Enter name of scene</string>
    <string name="save">Save</string>
    <string name="on_off">On/Off</string>
    <string name="delete_scene">Delete scene</string>
    <string name="hide_expendable">Hide</string>
    <string name="delete_message">Are you sure that you want to delete this scene?</string>
    <string name="dismiss">Dismiss</string>
    <string name="im_sure">Yes, I am sure</string>
    <string name="empty_scene_name">Scene name is empty! Write sth!</string>
    <string name="scene_deleted">Scene succesfully deleted!</string>

    <string name="device_exists">Device already exists!</string>
    <string name="only_100_or_0">Device accepts only 0 or 100</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

    <string name="airly_title">Airly</string>
    <string name="sensors_data">Sensors</string>
    <string name="get_data">Click to get data</string>
    <string name="too_many_reqeusts">Too many data requests!</string>

    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="forget_pass">Reset password</string>
    <string name="mail_address">Address email</string>
    <string name="password">Password</string>
    <string name="please_enter_all_fields">Please enter all fields!</string>
    <string name="logging">Busy... Logging you in...</string>
    <string name="login_success">Login succesfully!</string>
    <string name="log_error">Error while logging!</string>

    <string name="enter_user_name">Please enter your name</string>
    <string name="enter_email_address">Please enter your email address</string>
    <string name="enter_password">Please enter your password</string>
    <string name="reenter_password">Please re-enter your password</string>
    <string name="registering_user">Busy... Registering new user...</string>
    <string name="register_succes">Succes! New user registered!</string>
    <string name="passwords_not_same">Please check if your pass and re-enter pass are the same!</string>

    <string name="sensor_saved">Sensor saved succesfully!</string>
    <string name="sensor_name">Sensor name</string>
    <string name="sensor_deleted"> sensor succesfully deleted!</string>
    <string name="no_sensor">No sensors in database!</string>

    <string name="sure">Are you sure?</string>

    <string name="maps_api_key">AIzaSyD_wpuFsLS328cCb0kux_7qKkJZMBJPcHc</string>

</resources>