<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etSensorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="@string/sensor_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etSensorAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:gravity="center_horizontal"
            android:hint="Sensor address"
            android:inputType="textPersonName" />

        <CheckBox
            android:id="@+id/cbSensorTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/temperature" />

        <CheckBox
            android:id="@+id/cbSensorHum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/humidity" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>